--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.9.1",
     "@strapi/plugin-users-permissions": "4.9.1",
+    "@strapi/provider-upload-cloudinary": "^4.10.1",
     "@strapi/strapi": "4.9.1",
     "pg": "8.8.0",
     "stripe": "^12.3.0"
